--- a/frontend/src/app/pages/admin-landing/booking/booking.component.scss
+++ b/frontend/src/app/pages/admin-landing/booking/booking.component.scss
@@ -3,16 +3,12 @@
 }
 .card-icon
 {
-    background-color: var(--yellow);
+    // background-color: var(--yellow);
     border-radius: 100%;
     width: 45px;
     height: 45px;
     text-align: center;
     color: var(--white);
-}
-strong
-{
-    color: var(--yellow);
 }
 .card-icon i
 {
