--- a/frontend/src/app/pages/landing/landing.component.html
+++ b/frontend/src/app/pages/landing/landing.component.html
@@ -70,13 +70,16 @@ THE SOLUTION WAS QUICK TO DEPLOY AND THE CUSTOMER’S FEEDBACK WERE POSITIVE. WE
 
     </div> -->
 
+    <!-- <div class="">
+      <p>hello</p>
+    </div> -->
+
+
     <div class="mid">
-    <div class="box">
-      <h3 class="drive"> Drive <span class="comfy">in comfort.</span></h3>
-      <h6>Sometimes the best therapy is a long drive to nowhere just to clear the mind. Refuel your soul, love.</h6><br>
-      
-    </div>
- 
+      <div class="box">
+        <h3 class="drive"> Drive <span class="comfy">in comfort.</span></h3>
+        <h6>Sometimes the best therapy is a long drive to nowhere just to clear the mind. Refuel your soul, love.</h6><br>
+      </div>
     </div>
 
 
