--- a/frontend/src/app/pages/search/search.component.scss
+++ b/frontend/src/app/pages/search/search.component.scss
@@ -1,32 +1,75 @@
-.card{
+.search .card{
     background: linear-gradient(180deg, rgba(255, 190,22, 0.6) 0%, rgba(217, 217, 217, 0) 100%);
-    margin-bottom: 8rem;
+    margin-bottom: 7rem;
     border: none;
 }
 
-.card-title{
+.search .card-title{
     color:#08013a;
     font-weight: bold;
 }
-.btn{
+.search .btn{
     background-color: #FFBE16; 
     color: #08013a;
     font-size: small;
     width: 40%;
  }
  
- label
+ .search label
  {
     font-size: 11px;
     color: white;
     border-left: 4px solid #08013a;
  }
- p{
+ .search p{
     font-size: 12px;
     color: white; 
     margin-top: 12px; 
  }
 
-.top{
+.search .top{
     margin-top: 1rem;
+}
+.searched{
+    background-color: #ffffff;
+    margin-bottom: 100px;
+}
+.searched .card
+{
+    background-color: #1F1D2C;
+    border-radius: 5%;
+    height: 380px;
+}
+
+.searched .card:hover
+{
+    background-color: #FFBE16!important;
+    border-radius: 5%;
+    transform: scale(1.04);
+    border: none;
+}
+.searched .card img
+{
+    height: 200px;
+}
+
+.searched .card img:hover
+{
+    transform: rotateY(180deg);
+    animation-delay: 5s;
+    transition: 0.6s
+}
+.searched .btn{
+    height: 80%;
+    margin-top: 0;
+    padding-top: 0%;
+    padding-bottom: 0%;
+    background-color: #FFBE16!important;
+    color: black;
+    font-size: 14px;
+
+}
+.searched .btn:hover
+{
+    background-color: rgb(7, 1, 1);
 }
