--- a/frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/frontend/src/app/shared/side-bar/side-bar.component.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="mb-2">
-            <span><a [routerLink]="['/users']"><i class="bi bi-journal-text"></i> Booking</a></span>
+            <span><a [routerLink]="['/booking']"><i class="bi bi-journal-text"></i> Booking</a></span>
         </div>
 
         <div class="mb-2">
