--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -13,3 +13,4 @@ $prefix: "mo-";
 
 // Then import Bootstrap
 @import "../node_modules/bootstrap/scss/bootstrap";
+@import "~ngx-spinner/animations/ball-atom.css";
