--- a/frontend/src/app/pages/admin-landing/booking/booking.component.html
+++ b/frontend/src/app/pages/admin-landing/booking/booking.component.html
@@ -2,18 +2,18 @@
     <div class="card-header border-0 bg-white bordered">
        <div class="row">
            <div class="col-8">
-                <small>Registered Users</small>
+                <small>Company Brunces</small>
            </div>
-           <div class="col-4 ">
-                <div class="card-icon">
-                    <b><i class="bi bi-people"></i></b>
+           <div class="col-4">
+                <div class="card-icon bg-success">
+                    <strong><i class="bi bi-house-fill justify-content-end"></i></strong>
                 </div>
             </div>
        </div>
     </div>
 
-    <div class="card-body" *ngFor="let item of users">
-      <h5 class="card-title"><strong style="font-size: 60px;">{{item.numusers}}</strong> Users</h5>
+    <div class="card-body" *ngFor="let item of booking">
+      <h5 class="card-title"><strong style="font-size: 60px;" class="text-success">{{item.numbooking}}</strong> Bookings</h5>
 
       <div id="chart">
         <apx-chart
