--- a/frontend/src/app/pages/landing/landing.component.scss
+++ b/frontend/src/app/pages/landing/landing.component.scss
@@ -41,7 +41,7 @@
     justify-content: center;
     justify-items: center;
     align-items: center;
-    margin-top: 1rem;
+    // margin-top: 1rem;
 }
 
 .drive{
