--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -82,7 +82,7 @@
                 <td>{{booking.numberPlate}}</td>
                 <td>{{booking.fuelType}}</td>
                 <td>{{booking.bk_status}}</td>
-                <td><button type="button" class="btn btn-secondary btn-lg">Cancel</button></td>
+                <td><button type="button" class="btn btn-secondary btn-lg" (click)="cancelBooking(booking.id)">Cancel</button></td>
             </tr>
               
              
