--- a/frontend/src/app/pages/admin-landing/booking/booking.component.html
+++ b/frontend/src/app/pages/admin-landing/booking/booking.component.html
@@ -5,7 +5,7 @@
                 <small>Company Brunces</small>
            </div>
            <div class="col-4">
-                <div class="card-icon bg-success">
+                <div class="card-icon bg-primary">
                     <strong><i class="bi bi-house-fill justify-content-end"></i></strong>
                 </div>
             </div>
@@ -13,7 +13,7 @@
     </div>
 
     <div class="card-body" *ngFor="let item of booking">
-      <h5 class="card-title"><strong style="font-size: 60px;" class="text-success">{{item.numbooking}}</strong> Bookings</h5>
+      <h5 class="card-title"><strong style="font-size: 60px;" class="text-primary">{{item.numbooking}}</strong> Bookings</h5>
 
       <div id="chart">
         <apx-chart
