--- a/frontend/src/app/pages/booking/booking-list/booking-list.component.scss
+++ b/frontend/src/app/pages/booking/booking-list/booking-list.component.scss
@@ -3,3 +3,10 @@
     padding: 5px;
     border-radius: 5px;
 }
+.header
+{
+    background-color: var(--main-bg);
+    border-radius: 15px;
+    height: 120px;
+    color: var(--white);
+}
