--- a/frontend/src/app/pages/booking/booking-modal/booking-modal.component.html
+++ b/frontend/src/app/pages/booking/booking-modal/booking-modal.component.html
@@ -1,8 +1,14 @@
-<div class="container">
+<div class="container" *ngFor="let user of users">
 
     <div class="row">
-        <div class="col-lg-12 col-sm-12 col-md-12 text-center my-3">
+        <div class="col-lg-12 col-sm-12 col-md-12 text-center my-3" *ngIf="user.usertype =='client'">
             <h1>Update Booking</h1>
+        </div>
+
+        <div class="col-lg-12 col-sm-12 col-md-12 text-center my-3" *ngIf="user.usertype =='admin'">
+            <div class="header">
+              <h1 class="pt-4">Update Booking</h1>
+            </div>
         </div>
     </div>
 
@@ -76,7 +82,7 @@
 
 
     
-            <div class="col-lg-6 col-md-6 col-sm-12" *ngFor="let user of users">
+            <div class="col-lg-6 col-md-6 col-sm-12">
                 <div class="row" *ngIf="user.usertype =='admin'">
                     <label for="inputPassword" class="col-lg-12 col-sm-12 col-form-label">
                       <small>Update Booking Status</small></label>
@@ -103,3 +109,4 @@
        
     </Form>
 </div>
+<ngx-spinner bdColor = "rgba(0,0,0,0.8)" size = "large" color = "#ffbe16" type = "ball-atom" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
