--- a/frontend/src/app/pages/booking/booking-modal/booking-modal.component.scss
+++ b/frontend/src/app/pages/booking/booking-modal/booking-modal.component.scss
@@ -3,3 +3,11 @@
     padding: 1%;
     border-radius: 5px;
 }
+
+.header
+{
+    background-color: var(--main-bg);
+    border-radius: 15px;
+    height: 120px;
+    color: var(--white);
+}
