--- a/frontend/src/app/pages/booking/booking.component.html
+++ b/frontend/src/app/pages/booking/booking.component.html
@@ -182,5 +182,5 @@
   </div>
   
 </div>
-
+<ngx-spinner bdColor = "rgba(0,0,0,0.8)" size = "large" color = "#ffbe16" type = "ball-atom" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
  <!-- ----------------------------------------------- -->
