--- a/frontend/src/app/pages/admin-landing/report/report.component.html
+++ b/frontend/src/app/pages/admin-landing/report/report.component.html
@@ -1,7 +1,11 @@
-<div class="mt-5">
-    <div class="col-md-8" id="htmlData">
+<div class="mt-5" id="htmlData">
+    <div class="header ">
+        <h1>Zwiendedzi Current Month Report</h1>
+    </div>
+    
+    <div class="col-md-8">
         <table class="table table-bordered">
-            <tr class="table-primary">
+            <tr class="table-myprimary">
                 
                 <th>Number Of Cars</th>
                 <th>Current Month</th>
@@ -12,7 +16,118 @@
             </tr>
         </table>
     </div>
-    <div class="col-md-4 text-right">
-        <button class="btn btn-success btn-block" (click)="openPDF()">Download PDF</button>
+    <div class="col-md-4 my-3 text-right">
+        <!-- <button class="btn btn-success btn-block" (click)="openPDF()">Download PDF</button> -->
     </div>
+
+    <div class="col-md-8">
+        <table class="table table-bordered">
+            <tr class="table-myprimary">
+                
+                <th>Registered Users</th>
+                <th>Users Per Month</th>
+            </tr>
+            <tr *ngFor="let user of usersByReg">
+                <td>{{user.numuser}}</td>
+                <td>{{user.created_at}}</td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="col-md-8">
+        <table class="table table-bordered">
+            <tr class="table-myprimary">
+                
+                <th>Total Number Of Cars</th>
+                
+            </tr>
+            <tr *ngFor="let car of carsByDate3">
+                <td>{{car.numcars}}</td>
+                
+            </tr>
+        </table>
+    </div>
+   
+</div>
+<footer class="text-center text-white" style="background-color: #241d58;">
+    <!-- Grid container -->
+    <div class="container pt-4">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a
+        class="btn btn-outline-light  m-1" href="#!" role="button"
+          ><i class="bi bi-facebook"></i>
+        </a>
+  
+        <!-- Twitter -->
+        <a
+        class=  "btn btn-outline-light  m-1" href="#!" role="button"
+          ><i class="bi bi-twitter"></i>
+        </a>
+  
+        <!-- Google -->
+        <a
+        class="btn btn-outline-light  m-1" href="#!" role="button"
+          ><i class="bi bi-google"></i>
+        </a>
+  
+        <!-- Instagram -->
+        <a
+        class="btn btn-outline-light  m-1" href="#!" role="button"
+          ><i class="bi bi-instagram"></i>
+        </a>
+  
+        <!-- Linkedin -->
+        <a
+        class="btn btn-outline-light  m-1" href="#!" role="button"
+          ><i class="bi bi-linkedin"></i>
+        </a>
+
+        <!-- Github -->
+        <a
+        class="btn btn-outline-light  m-1" href="#!" role="button"
+          ><i class="bi bi-github"></i>
+        </a>
+      </section>
+      <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+    <!-- Section: Links  -->
+    <section class="">
+      <div class="container text-center text-md-start mt-5">
+        <!-- Grid row -->
+        <div class="row mt-3">
+          
+  
+          
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">Contact Us</h6>
+            <p><i class="bi bi-house-fill m-2 me-3"></i>   The Media Mill, 7 Quince St, Auckland Park, Johannesburg, 2000</p>
+            <p>
+              <i class="bi bi-envelope-fill m-2 me-3"></i>
+              rental@zwiendedzicars.co.za
+            </p>
+            <p><i class="bi bi-telephone-fill me-3"></i> +27 61 544 9366</p>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+      </div>
+    </section>
+    <!-- Section: Links  -->
+  
+    <!-- Copyright -->
+    <div class="text-center font-italic p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        Travel Hassle-Free With Zwiendedzi Rental Solutions...!
+    </div>
+    <!-- Copyright -->
+  </footer>
+
+<div class="text-center my-4 mx-auto">
+    <button class="btn btn-success btn-block Download-btn" (click)="openPDF()">Download PDF</button>
 </div>
