--- a/frontend/src/app/pages/admin-landing/report/report.component.html
+++ b/frontend/src/app/pages/admin-landing/report/report.component.html
@@ -49,7 +49,7 @@
     </div>
    
 </div>
-<footer class="text-center text-white" style="background-color: #241d58;">
+<footer class="footer text-center text-white" style="background-color: var(--main-bg);">
     <!-- Grid container -->
     <div class="container pt-4">
       <!-- Section: Social media -->
