--- a/frontend/src/app/pages/car-prod/car-prod.component.html
+++ b/frontend/src/app/pages/car-prod/car-prod.component.html
@@ -46,7 +46,12 @@
                 <td>
                   <div>
 
-                  <button type="edit" [routerLink]="['/editCar',car.id]"class="bi bi-pen-fill">Edit</button>
+                  <button type="edit" [routerLink]="['/editCar',car.id]"class="bi bi-pen-fill btn btn-primary">Edit</button>
+                  <br>
+                  <br>
+                  
+                  <button type="delete" class="bi bi-trash3-fill btn btn-danger" (click)='deleteCar(car.id)'><i class="bi bi-trash3-fill"></i>delete</button>
+                  
                   </div>
                   
                   <!-- <button type="button" (click)="deleteCar(car.id)" class="btn btn-danger">Delete</button> -->
