--- a/frontend/src/app/pages/edit-car/edit-car.component.html
+++ b/frontend/src/app/pages/edit-car/edit-car.component.html
@@ -1,12 +1,14 @@
 
 
 <div class="container my-4">
-    <h1 >Update car</h1>
+    
 
-
+    <div class="header">
+        <h1 class="pt-4">Update car</h1>
+      </div>
 
   
-    <a href="#" routerLink="/carlist" class="submit btn btn-primary">Back</a>
+    
     <br>
     <br>
     
@@ -133,7 +135,10 @@
       </div>
     </div>
     <div>
-        <button type="submit" (click)="EditCar()" class=" submit btn btn-primary"> SUBMIT</button>
+        <div class="d-flex justify-content-between">
+            <button type="submit" (click)="EditCar()" class=" submit btn btn-primary"> SUBMIT</button> 
+            <a routerLink="/carlist" class="submit btn btn-primary justify-content-end">Back</a>
+        </div>
         
     </div>
 
