--- a/frontend/src/app/pages/car-prod/car-prod.component.scss
+++ b/frontend/src/app/pages/car-prod/car-prod.component.scss
@@ -5,3 +5,12 @@
     height: 2rem;
     border-radius: 70%;
 }
+
+.header
+{
+    background-color: var(--main-bg);
+    border-radius: 15px;
+    height: 120px;
+    color: var(--white);
+    text-align: center;
+}
