--- a/frontend/src/app/pages/admin-landing/report/report.component.html
+++ b/frontend/src/app/pages/admin-landing/report/report.component.html
@@ -1,7 +1,10 @@
 <div class="mt-5 htmlData" id="htmlData" >
     <div class="header ">
+      <div class="container-fluid">
+          <img src="../../../../assets/logo.png" alt=""><br>
         <label>Zwiendedzi Current Month Report</label>
     </div>
+  </div>
     
     <div class="col-md-8">
         <table class="table table-bordered">
@@ -20,7 +23,7 @@
         <!-- <button class="btn btn-success btn-block" (click)="openPDF()">Download PDF</button> -->
     </div>
 
-    <div class="col-md-8">
+    <div class="col-md-8 my-4">
         <table class="table table-bordered">
             <tr class="table-myprimary">
                 
