--- a/frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/frontend/src/app/shared/side-bar/side-bar.component.html
@@ -78,14 +78,14 @@
             <span><b> <i class="bi bi-journal-bookmark"></i>  SAVED REPORTS</b></span>
         </div>
         <div class="mb-2">
-            <span><a [routerLink]="['/admin/mon-rt']"><i class="bi bi-journal-bookmark-fill"></i> Current Months</a></span>
+            <span><a [routerLink]="['/admin/mon-rt']"><i class="bi bi-journal-bookmark-fill"></i> Current Month</a></span>
         </div>
-        <div class="mb-2">
+        <!-- <div class="mb-2">
             <span><a [routerLink]="['/users']"><i class="bi bi-journal-bookmark-fill"></i> Last quarter</a></span>
         </div>
         <div class="mb-2">
             <span><a [routerLink]="['/users']"><i class="bi bi-journal-bookmark-fill"></i> Year-end </a></span>
-        </div>
+        </div> -->
         <span></span>
     </div>
   </div>
