--- a/frontend/src/app/pages/booking/booking-modal/booking-modal.component.html
+++ b/frontend/src/app/pages/booking/booking-modal/booking-modal.component.html
@@ -103,9 +103,22 @@
         </div>
         <div class="row">
             <div class="col text-center my-3">
-                <button class="btn btn-warning" (click)="updateBooking()">Udpdate<i class="bi bi-arrow"></i></button>
+                
             </div>
           </div>
+
+          <div class="d-flex justify-content-center mx-auto">
+            
+            <div class=" text-center mt-5">
+              <div class="mb-3 col-auto">
+                <button class="btn btn-warning" (click)="updateBooking()">Udpdate<i class="bi bi-arrow"></i></button>
+              </div>
+
+              <div class="mb-3 col-auto">
+                <a routerLink="/admin/booking" class="btn btn-warning">Back</a>
+              </div>
+          </div>
+    </div>
        
     </Form>
 </div>
