--- a/frontend/src/app/pages/car-prod/car-prod.component.html
+++ b/frontend/src/app/pages/car-prod/car-prod.component.html
@@ -4,7 +4,7 @@
     <h1 class="pt-4">Car list</h1>
   </div>
 
-    <a href="#" routerLink="/car" class="btn btn-success mb-4">Add New Car</a>
+    <a href="#" routerLink="/admin/car" class="btn btn-success mb-4 mt-4">Add New Car</a>
       
     <table class="table table-striped table-responsive table-hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
         <thead>
@@ -50,7 +50,7 @@
                 <td>
                   <div>
 
-                  <button type="edit" [routerLink]="['/editCar',car.id]"class="bi bi-pen-fill btn btn-primary">Edit</button>
+                  <button type="edit" [routerLink]="['/admin/editCar',car.id]"class="bi bi-pen-fill btn btn-primary">Edit</button>
                   <br>
                   <br>
                   
