--- a/frontend/src/app/pages/edit-car/edit-car.component.html
+++ b/frontend/src/app/pages/edit-car/edit-car.component.html
@@ -135,10 +135,18 @@
       </div>
     </div>
     <div>
-        <div class="d-flex justify-content-between">
-            <button type="submit" (click)="EditCar()" class=" submit btn btn-primary"> SUBMIT</button> 
-            <a routerLink="/carlist" class="submit btn btn-primary justify-content-end">Back</a>
-        </div>
+        <div class="d-flex justify-content-center mx-auto">
+            
+            <div class=" text-center mt-5">
+              <div class="mb-3 col-auto">
+                <button type="submit" (click)="EditCar()" class=" submit btn btn-primary"> SUBMIT</button> 
+              </div>
+
+              <div class="mb-3 col-auto">
+                <a routerLink="/admin/carlist" class="submit btn btn-primary justify-content-end">Back</a>
+              </div>
+          </div>
+    </div>
         
     </div>
 
