--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -6,37 +6,37 @@
       <section class="mb-4">
         <!-- Facebook -->
         <a
-        class="btn btn-outline-light  m-1" href="#!" role="button"
+        class="btn btn-outline-light  m-1" href="https://www.facebook.com/profile.php?id=100088235601375" role="button"
           ><i class="bi bi-facebook"></i>
         </a>
   
         <!-- Twitter -->
         <a
-        class=  "btn btn-outline-light  m-1" href="#!" role="button"
+        class=  "btn btn-outline-light  m-1" href="https://twitter.com/ZwieCarRental" role="button"
           ><i class="bi bi-twitter"></i>
         </a>
   
         <!-- Google -->
         <a
-        class="btn btn-outline-light  m-1" href="#!" role="button"
+        class="btn btn-outline-light  m-1" href="https://github.com/Ravhugoni/ZwiendedziRentalSolution" role="button"
           ><i class="bi bi-google"></i>
         </a>
   
         <!-- Instagram -->
         <a
-        class="btn btn-outline-light  m-1" href="#!" role="button"
+        class="btn btn-outline-light  m-1" href="https://www.facebook.com/profile.php?id=100088235601375" role="button"
           ><i class="bi bi-instagram"></i>
         </a>
   
         <!-- Linkedin -->
         <a
-        class="btn btn-outline-light  m-1" href="#!" role="button"
+        class="btn btn-outline-light  m-1" href="https://twitter.com/ZwieCarRental" role="button"
           ><i class="bi bi-linkedin"></i>
         </a>
 
         <!-- Github -->
         <a
-        class="btn btn-outline-light  m-1" href="#!" role="button"
+        class="btn btn-outline-light  m-1" href="https://github.com/Ravhugoni/ZwiendedziRentalSolution" role="button"
           ><i class="bi bi-github"></i>
         </a>
       </section>
